// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cards|ImageCard Image And Title 1`] = `
<div
  style={
    Object {
      "maxWidth": "700px",
    }
  }
>
  <ImageCard
    imageUrl="/images/listing.jpg"
    title="Hello World"
  >
    <div
      className="image-card__wrapper"
    >
      <figure
        className="image-card"
      >
        <img
          alt="Hello World"
          src="/images/listing.jpg"
        />
        <figcaption
          className="image-card__figcaption"
        >
          <h2
            className="image-card__title"
          >
            Hello World
          </h2>
          <p />
        </figcaption>
      </figure>
    </div>
  </ImageCard>
</div>
`;

exports[`Storyshots Cards|ImageCard With Link 1`] = `
<div
  style={
    Object {
      "maxWidth": "700px",
    }
  }
>
  <ImageCard
    as="/listings"
    href="/listings"
    imageUrl="/images/listing.jpg"
    title="Hello World"
  >
    <LocalizedLink
      as="/listings"
      href="/listings"
    >
      <Link
        as="/listings"
        href="/listings"
      >
        <a
          href="/listings"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="image-card__wrapper"
          >
            <figure
              className="image-card"
            >
              <img
                alt="Hello World"
                src="/images/listing.jpg"
              />
              <figcaption
                className="image-card__figcaption"
              >
                <h2
                  className="image-card__title"
                >
                  Hello World
                </h2>
                <p />
              </figcaption>
            </figure>
          </div>
        </a>
      </Link>
    </LocalizedLink>
  </ImageCard>
</div>
`;
